--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all contributors to the repository
 
 Baki Jessy Justice Julien <bakijessy@gmail.com>
-Adjei Gideon <@gmail.com>
+Adjei Gideon <gideonad@gmail.com>
